Alignment fixed

--- a/gallery.css
+++ b/gallery.css
@@ -220,7 +220,7 @@ footer {
 
 @media(max-width:400px) and (max-height:700px) {
     #redbg {
-        height: 200vh;
+        height: 300vh;
     }
     .testimg {
         width: 180px;
@@ -232,7 +232,7 @@ footer {
 
 @media(max-width:400px) and (max-height:600px) {
     #redbg {
-        height: 320vh;
+        height: 480vh;
     }
 
     .testimonial {
