--- a/iqmu2020.css
+++ b/iqmu2020.css
@@ -210,14 +210,14 @@ footer {
 
 @media(max-width:400px) and (max-height:700px) {
     #redbg {
-        height: 200vh;
+        height: 300vh;
     }
 
 }
 
 @media(max-width:400px) and (max-height:600px) {
     #redbg {
-        height: 300vh;
+        height: 400vh;
     }
 
     .testimonial {
