--- a/iqmubacktobasics.css
+++ b/iqmubacktobasics.css
@@ -492,7 +492,7 @@ button:hover {
 
     }
     #redbg {
-        height: 85vh;
+        height: 185vh;
 
     }
     .contentregisterbtnback {
